fixed times row alignment

--- a/src/components/BusEta/styles.module.css
+++ b/src/components/BusEta/styles.module.css
@@ -1,7 +1,6 @@
 .container {
   display: flex;
   flex-direction: column;
-  flex-grow: 0.5;
   justify-content: center;
   align-items: center;
   text-align: center;
