--- a/src/components/TimesList/styles.module.css
+++ b/src/components/TimesList/styles.module.css
@@ -7,7 +7,7 @@
   justify-content: space-between;
   padding: 0.75em;
   padding-left: 2.125em;
-  padding-right: 1em;
+  padding-right: 2em;
 }
 
 .divider {
